# RATE

./: .gitignore  Makefile  README.md  config_vowels.yaml  create_dataset.slurm  environment.yaml  environment.yml  environment_pre.yml  pyproject.toml  score_dataset.slurm  treatment_effects.slurm
batch_api_tutorial/: batch_tutorial.ipynb
batch_api_tutorial/batch_api_data/: sentiment_batch_input.jsonl  sentiment_batch_output.jsonl
complexity/: calculate_ate.py  evaluate_response_complexity.py  sample_complexity_distributions.py  sample_complexity_distributions_flipped_label.py
config/: config.json  config_aa.json  config_rlhf.json  config_sft.json
experiments/: config.yaml  constants.py  create_dataset.py  gpt4_api.py  results.ipynb  score_dataset.py  scoring_template.py  synthetic-results-25K.ipynb  treatment_effects.py  utils_plotting.py
experiments/dataset_templates/: eli5_length.py  helpsteer_complexity.py  helpsteer_helpfulness.py  hh_rlhf_helpfulness.py  hh_rlhf_sentiment.py  imdb_length.py  imdb_sentiment.py
notebooks/: directional_weights_demo.ipynb  edit-gemma.ipynb  efficacy.ipynb  figures.ipynb  full-pipeline.ipynb  generate_figures.py  interventional-prompts.ipynb  mixtral_demo.ipynb  new_plots.ipynb  nnsight_demo_edited_models.ipynb  pythia-generations.ipynb  results.ipynb  rewrites_squared.ipynb  sample_distributions_for_sentiment_prompts.ipynb  sentiment_genre_prompts.ipynb  synthetic-design.ipynb  synthetic-imdb-results.ipynb  test_new_completions.ipynb  vllm_test.py
slurm/: create_dataset.slurm  score_dataset.slurm  treatment_effects.slurm
(+30 files in other folders)
