[project]
name = "rate"
version = "0.1.0"
description = "Code for running experiments to calculate average treatment effects of binary concepts on reward models for the RATE paper."
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"